--- a/source/App.css
+++ b/source/App.css
@@ -2,12 +2,25 @@
 	Put anything you reference with "url()" in ../assets/
 	This way, you can minify your application, and just remove the "source" folder for production
 */
-.nice-padding {
-	padding: 15px;
-}
+
 #app {
     max-width:320px;
     margin:auto;
+}
+#title {
+/*
+    margin-top:7px;
+    margin-left:0px;
+*/
+}
+#install-button {
+    float:right;
+/*
+    margin-right:0px;
+    position:relative;
+    right: 0px;
+    top:0px;
+*/
 }
 .calc-button {
     width:90%;
@@ -19,14 +32,16 @@
     padding:5px;
 }
 
+/*
 .list-subnet {
     background-color: #eee;
 }
+*/
 .list-item {
-	border: 1px solid silver;
+/*	border: 1px solid silver;*/
     padding:10px;
 }
-.list-title {
+.list-label {
     color: dodgerblue;
     font-weight:bold;
 }
@@ -34,7 +49,13 @@
     float:right;
 }
 
-.list-sample-list {
+.popup {
+    font-size: 20px;
+	text-align: center;
+    padding: 10px;
+}
+
+/*.list-sample-list {
 	width: 50%;
 	min-width: 300px;
 	max-width: 600px;
@@ -51,4 +72,4 @@
 	float: right;
 	font-size: 16px;
 	font-weight: normal;
-}
+}*/
